--- a/package.json
+++ b/package.json
@@ -4,13 +4,23 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js", 
-    "dev": "nodemon index.js",
+    "start": "node index.js",
+    "dev": "concurrently \"npm run backend\" \"npm run start --prefix client\"",
     "backend": "nodemon index.js",
-    "frontend": "npm run start --prefix client",
-    "dev": "concurrently \"npm run backend\" \"npm run start --prefix client\""
+    "frontend": "npm run start --prefix client"
   },
   "keywords": [],
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "axios": "^0.26.1",
+    "bcryptjs": "^2.4.3",
+    "cors": "^2.8.5",
+    "dotenv": "^16.0.0",
+    "express": "^4.17.3",
+    "jsonwebtoken": "^8.5.1",
+    "pouchdb": "^7.2.2",
+    "pouchdb-authentication": "^1.1.3",
+    "pouchdb-find": "^7.2.2"
+  }
 }
